updated icons for previewing items

--- a/templates/italiansushi/index.html
+++ b/templates/italiansushi/index.html
@@ -291,7 +291,7 @@
 
                         var item = items_in_block[j];
                         return_html += '<img src="http://ddragon.leagueoflegends.com/cdn/5.16.1/img/item/' 
-                                                + item["id"] + '.png"' + ' style="height:45px;width:45px;">';
+                                                + item["id"] + '.png"' + ' class="item-icon">';
                     }
                     return_html += '</div>';
                     return_html += '</div>';
