--- a/templates/italiansushi/index.html
+++ b/templates/italiansushi/index.html
@@ -951,10 +951,12 @@
                                             + '</button>'
                                     + '</div></div>'
                                 + '</div>'
+                                + '<div class="row"><div class="col-xs-2 col-xs-offset-3">'
                                 + '<button type="button" class="btn btn-success btn-md' 
                                   + ' " id="view-itemset_json">'
                                   +  '<span class="fa fa-check">ClicktoConsoleLogItemSetJson</span>'
                                   + '</button>'
+                                + '</div></div>'
                             + '</div>',
                     onEscape: function() {},
                 });
