--- a/templates/italiansushi/index.html
+++ b/templates/italiansushi/index.html
@@ -101,19 +101,19 @@
                 <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 bhoechie-tab-menu">
                   <div class="list-group">
                     <a href="#" class="list-group-item active text-center">
-                      <h4 class="fa fa-cloud-upload"></h4><br/>Upload Item Sets
+                      <h4 class="fa fa-cloud-upload tab-fa-icon"></h4><br/><span class="tab-text">Upload Item Sets</span>
                     </a>
                     <a href="#" class="list-group-item text-center">
-                      <h4 class="fa fa-gamepad"></h4><br/>Lane Matchup Generator
+                      <h4 class="fa fa-gamepad tab-fa-icon"></h4><br/><span class="tab-text">Matchup Generator</span>
                     </a>
                     <a href="#" class="list-group-item text-center">
-                      <h4 class="fa fa-cogs"></h4><br/>Build a Custom Item Set
+                      <h4 class="fa fa-cogs tab-fa-icon"></h4><br/><span class="tab-text">Item Set Builder</span>
                     </a>
                     <a href="#" class="list-group-item text-center">
-                      <h4 class="fa fa-cutlery"></h4><br/>Feature4
+                      <h4 class="fa fa-search tab-fa-icon"></h4><br/><span class="tab-text">Search Tool</span>
                     </a>
                     <a href="#" class="list-group-item text-center">
-                      <h4 class="fa fa-credit-card"></h4><br/>Feature5
+                      <h4 class="fa fa-files-o tab-fa-icon"></h4><br/><span class="tab-text">Saved Item Sets Manager</span>
                     </a>
                   </div>
                 </div>
@@ -142,12 +142,10 @@
 
                             <form id="upload-form" method="POST" enctype="multipart/form-data" action="/upload/">
                                 {% csrf_token %}
-                                <div class="col-xs-12">
-                                <input type="file" name="json" required/>
+                                <div class="col-xs-12 col-xs-offset-1">
+                                <input type="file" name="json" style="margin-bottom:5px;" required/>
                                 </div>
-                                <div class="col-xs-12" style="margin-bottom:5px; font-size:12px;">
-                                    <a href="#" id="toggleAdvancedOptions">Advanced Options</a>
-                                </div>
+                                
                                 <div id="uploadAdvancedOptions" class="col-xs-12" style="display: none; margin-bottom:5px;">
                                     <div class="ui-widget col-sm-4">
                                         <input class="champ-input" id="upload_champ1" name="champ1" placeholder="Champion For"/>
@@ -168,8 +166,9 @@
                                 <div class="col-xs-12">
                                     <input type="submit" id="btn-upload-submit" name="submit" value="Upload" 
                                         class="btn btn-md btn-primary btn-side"/>
-                                    <a href="#" id="viewfiles-btn" class="btn btn-md btn-primary btn-side viewfiles-popup">
-                                    View Uploaded Sets</a>
+                                </div>
+                                <div class="col-xs-12" style="font-size:12px;">
+                                    <a href="#" id="toggleAdvancedOptions">Advanced Options</a>
                                 </div>
                                 
                             </form>
@@ -213,27 +212,41 @@
                             <div class="row">
                                 <div class="col-xs-12 btn-top-bot-margins">
                                 <a id="build-popup-btn" class="btn btn-md btn-primary build-popup">
-                                    Build an Item Set</a>
+                                    Open Item Set Builder</a>
                                 </div>
-                            <div class="col-xs-12 btn-top-bot-margins">
-                                <a id="editview-popup-btn" class="btn btn-md btn-primary viewfiles-popup">
-                                    Edit Existing Sets</a>
-                                </div>
+                        </center>
+                    </div>
+                    <div class="bhoechie-tab-content">
+                        <center>
+                          <h1 class="fa fa-search color-icon"></h1>
+                          <h2 class="color-header">Search</h2>
+                          <h3 class="color-header">Search for custom item sets to download.</h3>
+                        </center>
+                    </div>
+                    <div class="bhoechie-tab-content">
+                        <center>
+                            <h1 class="fa fa-files-o color-icon"></h1>
+                            <h2 class="color-header">Manage Saved Item Sets</h2>
+                            <h5 class="color-header">Preview, edit, download, and delete your item sets.</h3>
+
+                            {% if not logged_in %}
+                            <h5 class="color-header">
+                                It looks like you aren't logged in. 
+                                You must log in to view saved item sets. 
+                                If you don't have an account, you can create one for free! 
+                            </h5>
+                            <a href="#" id="login-btn" class="btn btn-md btn-primary btn-side login-popup">
+                                Log In</a>
+                            &nbsp;
+                            <a href="#" id="createuser-btn" class="btn btn-md btn-primary btn-side createuser-popup">
+                                Create Account</a>
+                            {% else %}
+                            <div class="col-xs-12">
+                            <a href="#" id="viewfiles-btn" class="btn btn-md btn-primary btn-side viewfiles-popup">
+                                        Open Item Set Manager</a>
                             </div>
-                        </center>
-                    </div>
-                    <div class="bhoechie-tab-content">
-                        <center>
-                          <h1 class="fa fa-cutlery color-icon"></h1>
-                          <h2 class="color-header">Coming Soon</h2>
-                          <h3 class="color-header">Generate a random item set</h3>
-                        </center>
-                    </div>
-                    <div class="bhoechie-tab-content">
-                        <center>
-                          <h1 class="fa fa-credit-card color-icon"></h1>
-                          <h2 class="color-header">Coming Soon</h2>
-                          <h3 class="color-header">Money Money Money</h3>
+                            {% endif %}
+
                         </center>
                     </div>
                 </div>
@@ -290,8 +303,14 @@
                     {
 
                         var item = items_in_block[j];
-                        return_html += '<img src="http://ddragon.leagueoflegends.com/cdn/5.16.1/img/item/' 
-                                                + item["id"] + '.png"' + ' class="item-icon">';
+                        var quantity = "";
+                        if (item["count"] > 1)
+                            quantity = item["count"];
+                        return_html +=  '<div class="item-icon-container">'
+                                            +'<img src="http://ddragon.leagueoflegends.com/cdn/5.16.1/img/item/' 
+                                                + item["id"] + '.png"' + ' class="item-icon">'
+                                                + '<span class="item-quantity-overlay">' + quantity + '</span>'
+                                        + '</div>';
                     }
                     return_html += '</div>';
                     return_html += '</div>';
@@ -518,7 +537,7 @@
                     
                     message: '<div class="row">'
                                 + '<div class="col-xs-12">'
-                                    + '<h1 class="text-center form-title"> Download and Delete your Item Sets </h1>'
+                                    + '<h1 class="text-center form-title"> Manage Your Item Sets </h1>'
                                     + '<div class="panel panel-default">'
                                         + '<div class ="panel-body" id="dynamic-panel">'
                                         + '</div>'
@@ -796,6 +815,7 @@
                     e.preventDefault();
                     var save_form = document.getElementById('save_' + matchup_fileid + '_form');
                     {% if logged_in %}
+                    $(".btn-save-item").attr("disabled","disabled");
                     $.ajax({
                         url: "/matchup-save-file/",
                         type: "POST",
@@ -804,20 +824,17 @@
                             if (json["success"]) 
                             {
                                 updateSuccessSpan("ItemSet added to your items successfully!");
-                                $(".btn-save-item").attr("disabled","disabled");
                             }
                             else if (json["max_uploads_reached"])
                             {
                                 var mssg = "Sorry, you have reached the item set max of 10" 
                                                                         + " and cannot add more item sets.";
                                 updateDangerSpan(mssg);
-                                $(".btn-save-item").attr("disabled","disabled");
                             }
                             else 
                             {
                                 var mssg = "Sorry, something went wrong. Refresh and try again."
                                 updateDangerSpan(mssg);
-                                $(".btn-save-item").attr("disabled","disabled");
                             }
                         },
                         error : function(xhr, errmsg, err){
@@ -886,7 +903,7 @@
             var item_info;
             var isSaved = false;
             var link_filename;
-            var itemset_json = {'title':'Custom Itahm Set Page', 
+            var itemset_json = {'title':'Custom iTahm Set Page', 
                                 'type':'global',
                                 'map':'any',
                                 'mode':'any',
@@ -907,7 +924,7 @@
                                     + '<div class="row">'
 
                                     + '<div class="col-xs-9 text-center form-title">'
-                                        + '<strong><span id="custom-title-span">Custom Itahm Set Page</span></strong>'
+                                        + '<strong><span id="custom-title-span">Custom iTahm Set Page</span></strong>'
                                     + '<span id="custom-title-edit-span" style="display:none;font-size:14px;">'
                                         + '<i><input type="text" id="custom-title-edit-input" class="edit-input"></input></i>' 
                                     + '</span>'
@@ -925,10 +942,10 @@
                                     + ' type="submit" class="btn btn-success" id="btn-dl-custom" target="_blank" disabled="disabled">'
                                     + '<span class="fa fa-download"></span></a></div>'
 
-                                    + '<div class="col-xs-12" style="padding-right:7%; margin-top:5px; font-size:12px;">'
+                                    + '<div class="col-xs-12" style="padding-right:7%; margin-top:5px; margin-bottom:3px; font-size:12px;">'
                                         + '<a href="#" id="toggleCustomAdvancedOptions" class="pull-right">Advanced Options</a>'
                                     + '</div>'
-                                    + '<div id="customAdvancedOptions" class="col-xs-12" style="display: none; margin-bottom:5px;">'
+                                    + '<div id="customAdvancedOptions" class="col-xs-12" style="display: none;">'
                                         + '<div class="ui-widget col-sm-4">'
                                             + '<input class="champ-input" id="custom_champ1" name="champ1" placeholder="Champion For"/>'
                                         + '</div>'
@@ -947,7 +964,7 @@
                                     + '</div>'
 
                                     + '</div>'
-                                    + '<hr>'
+                                    + '<hr class="hr-sm">'
 
                                     + '<div class="row" id="add-block-row"><div class="col-xs-12">'
                                         + '<button type="button" class="btn btn-default btn-add-block">'
@@ -988,6 +1005,7 @@
                     }
                     var lane = $('#custom-lane').val();
                     {% if logged_in %}
+                    $(".btn-save-custom").attr("disabled","disabled");
                     $.ajax({
                         url: "/custom-save-file/",
                         type: "POST",
@@ -1013,8 +1031,6 @@
                                 var mssg = "Sorry, something went wrong. Refresh and try again.";
                                 updateDangerSpan(mssg);
                             }
-                            $(".btn-save-custom").attr("disabled","disabled");
-
                         },
                         error : function(xhr, errmsg, err){
                             console.log(xhr.status + ": " + xhr.responseText);
