--- a/templates/italiansushi/index.html
+++ b/templates/italiansushi/index.html
@@ -219,15 +219,15 @@
                     <div class="bhoechie-tab-content">
                         <center>
                           <h1 class="fa fa-search color-icon"></h1>
-                          <h2 class="color-header">Search</h2>
-                          <h3 class="color-header">Search for custom item sets to download.</h3>
+                          <h2 class="color-header">Coming Soon</h2>
+                          <h5 class="color-header">Search for custom item sets to download.</h5>
                         </center>
                     </div>
                     <div class="bhoechie-tab-content">
                         <center>
                             <h1 class="fa fa-files-o color-icon"></h1>
                             <h2 class="color-header">Manage Saved Item Sets</h2>
-                            <h5 class="color-header">Preview, edit, download, and delete your item sets.</h3>
+                            <h5 class="color-header">Preview, edit, download, and delete your item sets.</h5>
 
                             {% if not logged_in %}
                             <h5 class="color-header">
