--- a/static/css/index.css
+++ b/static/css/index.css
@@ -37,6 +37,20 @@
   background-color: #DBDBDB;
 }
 
+.faq-container {
+  background-image: url(http://i.imgur.com/0IYtdou.jpg);
+  max-width:100%;
+  max-height:100%;
+  background-size:100% 100%;
+  background-repeat:no-repeat;
+  position:relative;
+}
+
+.inner-faq-container {
+ padding: 3% 7%;
+ background-color: #DBDBDB;
+}
+
 .section-container {
 /*  background-color: #55518a; */
   padding-top: 5%;
