--- a/templates/italiansushi/index.html
+++ b/templates/italiansushi/index.html
@@ -77,6 +77,9 @@
                         </ul>
                     </li> -->
                 </ul>
+                <ul class="nav navbar-nav">
+                    <li><a href="/faq">FAQ</a></li>
+                </ul>
                 <ul class="nav navbar-nav navbar-right">
                     {% if logged_in %}
                     <li><a href="../logout/">{{ user.username }} | Logout</a></li> 
