--- a/templates/italiansushi/index.html
+++ b/templates/italiansushi/index.html
@@ -817,10 +817,11 @@
                            + '<div class="col-xs-12">'
                            + '<div class="tutorial-container">'
                            + '<h3>Build Custom Item Set Tutorial</h3>'
-                           + '<p> (tons o pictures) Clicking the button at the top allows you to change the name of the item set you are building.</p>'
+                           + '<p> Well, the easiest thing that you\'ll do today is to open up this builder, so hopefully that part is easy enough to figure out.</p>'
                            + '<p> Click ‘Add a block’ to start off! You can also name individual blocks by clicking on this button next to the delete button.</p>'
                            + '<p> Simply click the ‘+’ to add an item. If you want to buy more than one of the same item, they will stack, indicated by a number in the lower right corner. Click the ‘x’ in the upper right corner to get rid of the item. Don’t worry, if you have items stacked up, this will not remove all of them; just one!</p>'
                            + '<p> Done with the greatest Tahm Kench build ever? Click the save button at the upper right corner and you’re good to go! </p>'
+                           + '<p> By the way, clicking the button at the top allows you to change the name of the item set you are building.</p>'
                            + '<p> You can also immediately download the item set to use in game. Good luck on the Fields of Justice! </p>'
                            + '<p> Click \‘Advanced Options\’ to set further details about your item set.<br>Note: You do not need to fill in any of the options at all! If you do decide to, you don’t have to fill in every option!<br>\'Champion For\' indicates which champion you are making this item set for.<br>‘Champion Against’ indicates which champion this build can be potentially be used against.<br>The third option simply lets you choose which lane this item set is usually used in. Feel free to leave the option as ‘any lane’ if you honestly think it’d be good for any lane!</p>'
                            + '</div>'
@@ -861,7 +862,7 @@
                              + '<p> In here, you can view and manage your item sets!</p>'
                              + '<img src="https://i.gyazo.com/05616cc34cf3fe6153c3f3f8c2db5637.png" style="width:90%; height:90%">'
                              + '<p>Alright, here’s what you can do with all the colorful buttons:</p>'
-                             + '</h5>1. Preview</h5>:<p>Hopefully, you gave your item sets names so you can easily distinguish which is which. If not, it’s still somewhat okay! You can click the preview button to see your item set<br>Download: Use your item set in game! Clicking this button will open the json file of the item set in a new tab. Don’t know how to actually get this into your game? There’s more info of how below.<br>Edit: Change something in your item set whether it be the name, an item, a new block or anything else you see fit!<br>Delete: Want to make room for an even better item set? If you click this button, you’ll get rid of an already saved item set, but be careful because this action cannot be undone. (Of course you can always make it again in the \‘Item Set Builder\’ tab!</p>'
+                             + '<p><strong>1. Preview:</strong> Hopefully, you gave your item sets names so you can easily distinguish which is which. If not, it’s still somewhat okay! You can click the preview button to see your item set<br><strong>2. Download:</strong> Use your item set in game! Clicking this button will open the json file of the item set in a new tab. Don’t know how to actually get this into your game? There’s more info of how below.<br><strong>3. Edit:</strong> Change something in your item set whether it be the name, an item, a new block or anything else you see fit!<br><strong>4. Delete:</strong> Want to make room for an even better item set? If you click this button, you’ll get rid of an already saved item set, but be careful because this action cannot be undone. (Of course you can always make it again in the \‘Item Set Builder\’ tab!</p>'
                              + '<p> So how exactly DO you use the downloaded json file? Well...</p>'
                              + '</div>'
                              + '</div>',
