--- a/templates/italiansushi/index.html
+++ b/templates/italiansushi/index.html
@@ -150,6 +150,7 @@
                                 </div>
                                 
                                 <div id="uploadAdvancedOptions" class="col-xs-12" style="display: none; margin-bottom:5px;">
+                                     <div class="col-xs-12"><p style="font-size:10px"> Leaving an advanced field blank defaults it to any. </p></div>
                                     <div class="ui-widget col-sm-4">
                                         <input class="champ-input" id="upload_champ1" name="champ1" placeholder="Champion For"/>
                                     </div>
@@ -176,7 +177,6 @@
                                 <div class="col-xs-12" style="font-size:12px">
                                     <a href="#" id="uploadTutorial-btn" class="uploadTutorial-popup">Tutorial</a>
                                 </div>
-                                
                             </form>
 
                             {% endif %}
@@ -189,6 +189,9 @@
                             <h5 class="color-header">
                                 Enter your champion and lane opponent to get an item set customized for your matchup.
                             </h5>
+                            <div class="col-xs-12"><p style="font-size:10px; margin-bottom:5px;"> 
+                                <i>Your Champion</i> cannot be blank. Leaving <i>Your Opponent</i> blank defaults it to any. 
+                                </p></div>
                             <div class="ui-widget col-sm-4">
                                 <input class="champ-input" id="champ1" placeholder=" Your Champion"/>
                             </div>
@@ -231,8 +234,9 @@
                     <div class="bhoechie-tab-content">
                         <center>
                             <h1 class="fa fa-search color-icon"></h1>
-                            <h2 class="color-header">Coming Soon</h2>
-                            <h5 class="color-header">Search for custom item sets to download.</h5>
+                            <h2 class="color-header">Item Set Search</h2>
+                            <h5 class="color-header">Find, vote, and download the item sets that other players have created.</h5>
+                            <div class="col-xs-12"><p style="font-size:10px; margin-bottom:5px;"> Leaving a field blank defaults it to any. </p></div>
                             <div class="ui-widget col-sm-4">
                                 <input class="champ-input" id="search-champ1" placeholder=" Your Champion"/>
                             </div>
@@ -253,7 +257,7 @@
                                 Search Item Sets</a>
                             </div>
                         </center>
-                        <div class="col-xs-12" style="font-size:12px">
+                        <div class="text-center col-xs-12" style="font-size:12px">
                             <a href="#" id="searchTutorial-btn" class="searchTutorial-popup">Tutorial</a>
                         </div>
                     </div>
@@ -1155,6 +1159,7 @@
                                                 + '<a href="#" id="toggleCustomAdvancedOptions" class="pull-right">Advanced Options</a>'
                                             + '</div>'
                                             + '<div id="customAdvancedOptions" class="col-xs-12" style="display: none;">'
+                                                + '<div class="col-xs-12"><p style="font-size:10px"> Leaving a field blank defaults it to any.</p></div>'
                                                 + '<div class="ui-widget col-sm-4">'
                                                     + '<input class="champ-input" id="custom_champ1" name="champ1" placeholder="Champion For"/>'
                                                 + '</div>'
@@ -1183,12 +1188,6 @@
                                             + '</div>'
                                         + '</div>'
                                         
-                                        + '<div class="row"><div class="col-xs-2 col-xs-offset-3">'
-                                        + '<button type="button" class="btn btn-success btn-md' 
-                                          + ' " id="view-itemset_json">'
-                                          +  '<span class="fa fa-check">ClicktoConsoleLogItemSetJson</span>'
-                                          + '</button>'
-                                        + '</div></div>'
                                     + '</div>',
                             onEscape: function() {},
                         });
@@ -1696,7 +1695,7 @@
                 success : function(json) {
                     // Display champ names, or red if not found, or None if blank
                     if (json['champ1_id'] == 0) {
-                        champ1 = "None";
+                        champ1 = "Any";
                         id1 = json['champ1_id'];
                     }
                     else if (!json['champ1_id']) // None or null 
@@ -1705,7 +1704,7 @@
                         id1 = json['champ1_id']; 
 
                     if (json['champ2_id'] == 0) {
-                        champ2 = "None";
+                        champ2 = "Any";
                         id2 = json['champ2_id'];
                     }
                     else if (!json['champ2_id']) // None or null 
@@ -1935,6 +1934,7 @@
                                         + '<a href="#" id="toggleCustomAdvancedOptions" class="pull-right">Advanced Options</a>'
                                     + '</div>'
                                     + '<div id="customAdvancedOptions" class="col-xs-12" style="display: none;">'
+                                     + '<div class="col-xs-12"><p style="font-size:10px"> Leaving a field blank defaults it to any. </p></div>'
                                         + '<div class="ui-widget col-sm-4">'
                                             + '<input class="champ-input" id="custom_champ1" name="champ1" placeholder="Champion For"/>'
                                         + '</div>'
@@ -1961,12 +1961,6 @@
                                             + '</button>'
                                     + '</div></div>'
                                 + '</div>'
-                                + '<div class="row"><div class="col-xs-2 col-xs-offset-3">'
-                                + '<button type="button" class="btn btn-success btn-md' 
-                                  + ' " id="view-itemset_json">'
-                                  +  '<span class="fa fa-check">ClicktoConsoleLogItemSetJson</span>'
-                                  + '</button>'
-                                + '</div></div>'
                             + '</div>',
                     onEscape: function() {},
                 });
@@ -2554,7 +2548,7 @@
             updateDangerSpan(mssg);
         }
         else if (savestatus=="success") {
-            var mssg = "Matchup itemset added to your account successfully!";
+            var mssg = "The itemset was added to your account successfully!";
             updateSuccessSpan(mssg);
         }
         else if (savestatus=="badItemSet") {
